fixed welcome elements responsiveness on small displays

--- a/src/components/WelcomeElements/WelcomeElements.module.css
+++ b/src/components/WelcomeElements/WelcomeElements.module.css
@@ -2,6 +2,7 @@
   margin:auto;
   color: #474747;
   max-width: 500px;
+  max-height: 800px;
   background: rgba(251, 243, 238, 0.80);
   padding: 30px 30px 30px 30px;
   border-radius: 400px 50px 50px 50px;
